add necessary metadata

--- a/multiprocessing/Cargo.toml
+++ b/multiprocessing/Cargo.toml
@@ -1,7 +1,10 @@
 [package]
 name = "multiprocessing"
 version = "0.1.0"
+authors = ["Pavel Šimerda <code@simerda.eu>"]
 edition = "2021"
+description = "An experimental crate for POSIX-based multiprocessing"
+license = "MIT OR Apache-2.0"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
