--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,3 +11,6 @@ license = "MIT OR Apache-2.0"
 [dependencies]
 nix = "0"
 libc = "0"
+
+[dev-dependencies]
+tokio = { version = "1", features = ["full"] }
